@@ -2,7 +2,7 @@ This directory contains an implementation of pthreads for Win32.
 
 Mailing list
 ------------
-Dec 10 1998
+Dec 10, 1998
 
 There is a mailing list for discussing pthreads on Win32 which is
 managed by Majordomo. To subscribe, send mail to majordomo@air.net.au
@@ -13,7 +13,7 @@ and place the fllowing text in the message body:
 
 Building the library with Cygwin32 or Mingw32
 ---------------------------------------------
-Dec 2 1998
+Jan 9, 1999
 
 The package cannot yet be built using cygwin32 or mingw32 because
 the win32 compatibility stub libraries that come with those tools generate
@@ -21,7 +21,8 @@ their stub library function calls from the Win95 dll set
 which don't include the _beginthreadx or _endthreadx functions used in this
 package.
 
-A precompiled DLL and matching include file can be found at:
+The complete zipped (should be pkunzip compatible) source code and
+a precompiled DLL and matching pthread.h can be found at:
 	ftp://sourceware.cygnus.com/pub/pthreads-win32
 
 Home page:
